# ising-conditional-routing

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml  styles.css
docs/: index.html  search.json  styles.css
docs/experiments/: real_data.html  synthetic_data.html
experiments/: real_data.ipynb  synthetic_data.ipynb
