[project]
name = "experiment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "thrml>=0.1.3",
    "matplotlib>=3.8.0",
    "jax>=0.4.0",
    "numpy>=1.26.0",
    "ipykernel>=7.1.0",
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
]
